Start cleaning up some usage of deprecated API's now that we are Java11