@@ -252,7 +252,7 @@ public class CorbaStreamFaultOutInterceptor extends AbstractPhaseInterceptor<Mes
         // one has not been created on the servant side which throws the UserException.
         if (fault == null) {
             Class<?> faultClass = faultMethod.getReturnType();
-            fault = faultClass.newInstance();
+            fault = faultClass.getDeclaredConstructor().newInstance();
         }
 
         CorbaFaultStreamWriter faultWriter = new CorbaFaultStreamWriter(orb, exType,
