@@ -187,7 +187,7 @@ public class AsyncResponseImpl implements AsyncResponse, ContinuationCallback {
         try {
             Object[] extraCallbacks = new Object[callbacks.length];
             for (int i = 0; i < callbacks.length; i++) {
-                extraCallbacks[i] = callbacks[i].newInstance();
+                extraCallbacks[i] = callbacks[i].getDeclaredConstructor().newInstance();
             }
             return register(callback.newInstance(), extraCallbacks);
         } catch (NullPointerException e) {
