@@ -73,7 +73,7 @@ public class CodeFirstWSDLTest extends AbstractJaxWsTest {
         ServerFactoryBean svrFactory = new ServerFactoryBean();
         svrFactory.setBus(bus);
         svrFactory.setServiceFactory(bean);
-        svrFactory.setServiceBean(clazz.newInstance());
+        svrFactory.setServiceBean(clazz.getDeclaredConstructor().newInstance());
         svrFactory.setAddress(address);
         svrFactory.create();
 
