@@ -455,7 +455,7 @@ public class JAXBDataBinding implements DataBindingProfile {
                     cname = cname.substring(1);
                 }
                 try {
-                    defaultValues = (DefaultValueProvider)Class.forName(cname).newInstance();
+                    defaultValues = (DefaultValueProvider)Class.forName(cname).getDeclaredConstructor().newInstance();
                 } catch (Exception e) {
                     LOG.log(Level.SEVERE, e.getMessage());
                     throw new ToolException(e);
